force-app/src/objects/CampaignMember.object
<CustomObject>
    <fields>
        <fullName>School_Attendee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>School Attendee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Application_V2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Application V2 object used for the SFMC/Digital Engagement integration.</description>
        <inlineHelpText>Lookup to the Application V2 object used for the SFMC/Digital Engagement integration.</inlineHelpText>
        <label>Application V2</label>
        <referenceTo>TR1__Application_V2__c</referenceTo>
        <relationshipLabel>Campaign Members</relationshipLabel>
        <relationshipName>Campaign_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Campaign_Template_Mapping__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to the related Campaign Template Mapping</description>
        <inlineHelpText>Link to the related Campaign Template Mapping</inlineHelpText>
        <label>Campaign Template Mapping</label>
        <referenceTo>TR1__Campaign_Template_Mapping__c</referenceTo>
        <relationshipLabel>Campaign Members</relationshipLabel>
        <relationshipName>Campaign_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Email__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines if a message has to be sent via Email</description>
        <inlineHelpText>Determines if a message has to be sent via Email</inlineHelpText>
        <label>Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__External_Template_for_SMS__c</fullName>
        <description>Stores the External Key Value for SMS if &apos;Use External Source for Templates&apos; is active.</description>
        <inlineHelpText>Stores the External Key Value for SMS if &apos;Use External Source for Templates&apos; is active.</inlineHelpText>
        <label>External Template for SMS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__External_Template_for_WhatsApp__c</fullName>
        <description>Stores the External Key Value for WhatsApp if &apos;Use External Source for Templates&apos; is active.</description>
        <inlineHelpText>Stores the External Key Value for WhatsApp if &apos;Use External Source for Templates&apos; is active.</inlineHelpText>
        <label>External Template for WhatsApp</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Job_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Account object related to a job used for the SFMC/Digital Engagement integration.</description>
        <inlineHelpText>Lookup to the Account object related to a job used for the SFMC/Digital Engagement integration.</inlineHelpText>
        <label>Job Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Campaign Members</relationshipLabel>
        <relationshipName>Campaign_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Job__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Job object used for the SFMC/Digital Engagement integration.</description>
        <inlineHelpText>Lookup to the Job object used for the SFMC/Digital Engagement integration.</inlineHelpText>
        <label>Job</label>
        <referenceTo>TR1__Job__c</referenceTo>
        <relationshipLabel>Campaign Members</relationshipLabel>
        <relationshipName>Campaign_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Language__c</fullName>
        <description>Stores the language which the user selected from the language dropdown on the BH4SF Email Editor.</description>
        <inlineHelpText>Stores the language which the user selected from the language dropdown on the BH4SF Email Editor.</inlineHelpText>
        <label>Language</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Message_Detail__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Message Detail object used for the SFMC/Digital Engagement integration.</description>
        <inlineHelpText>Lookup to the Message Detail object used for the SFMC/Digital Engagement integration.</inlineHelpText>
        <label>Message Detail</label>
        <referenceTo>TR1__Message_Detail__c</referenceTo>
        <relationshipLabel>Campaign Members</relationshipLabel>
        <relationshipName>Campaign_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Recipient_Email__c</fullName>
        <description>Stores the email address to which the message will be sent.</description>
        <inlineHelpText>Stores the email address to which the message will be sent.</inlineHelpText>
        <label>Recipient Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>TR1__SMS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines if a message additionally has to be sent via SMS</description>
        <inlineHelpText>Determines if a message additionally has to be sent via SMS</inlineHelpText>
        <label>SMS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Send_Out_Schedule_V2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Send Out Schedule V2 object used for the SFMC/Digital Engagement integration.</description>
        <inlineHelpText>Lookup to the Send Out Schedule V2 object used for the SFMC/Digital Engagement integration.</inlineHelpText>
        <label>Send Out Schedule V2</label>
        <referenceTo>TR1__Send_Out_Schedule_V2__c</referenceTo>
        <relationshipLabel>Campaign Members</relationshipLabel>
        <relationshipName>Campaign_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Sender_Email__c</fullName>
        <description>Stores the email which should be displayed in the &quot;From&quot; section of email message.</description>
        <inlineHelpText>Stores the email which should be displayed in the &quot;From&quot; section of email message.</inlineHelpText>
        <label>Sender Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>TR1__Sender_Name__c</fullName>
        <description>Stores the Name of the person who send an email.</description>
        <inlineHelpText>Stores the Name of the person who send an email.</inlineHelpText>
        <label>Sender Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Sender__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the User record used for the SFMC/Digital Engagement integration to provide information about the message sender(eg Name, Email)</description>
        <inlineHelpText>Lookup to the User record used for the SFMC/Digital Engagement integration to provide information about the message sender(eg Name, Email)</inlineHelpText>
        <label>Sender</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Campaign_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__WhatsApp__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines if a message additionally has to be sent via WhatsApp</description>
        <inlineHelpText>Determines if a message additionally has to be sent via WhatsApp</inlineHelpText>
        <label>WhatsApp</label>
        <type>Checkbox</type>
    </fields>
    <sharingModel>ControlledByCampaign</sharingModel>
</CustomObject>